fix(LandingVideo): change height from vh to dvh to ensure full video visibility on mobile

--- a/src/components/common/(LandingVideo)/LandingVideo.module.css
+++ b/src/components/common/(LandingVideo)/LandingVideo.module.css
@@ -1,6 +1,5 @@
 .landingVideoContainer {
   width: 100%;
-  height: 90vh;
   position: relative;
   overflow: hidden;
 }
